[package]
name = "programinduction"
version = "0.7.4"
authors = ["Lucas Morales <lucas@lucasem.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/lucasem/program-induction"
homepage = "https://github.com/lucasem/program-induction"
documentation = "https://docs.rs/programinduction"
description = "A library for program induction and learning representations."
keywords = ["language", "inference", "bayesian", "genetic", "learning"]
categories = ["algorithms", "science"]

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", ".cargo/registry/src/github.com-1ecc6299db9ec823/programinduction-0.3.0/rustdoc-include-katex-header.html"]

[dependencies]
crossbeam-channel = "0.3"
itertools = "0.8"
lazy_static = "1.3"
maplit = "1.0"
nom = "4.2"
polytype = "6.0"
rand = "0.6"
rayon = "1.0"
serde = "1.0"
serde_derive = "1.0"
term_rewriting = "0.5"

[dev-dependencies]
serde_json = "1.0"

[features]
verbose = []
